# smart_farm

./: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  capteurs.txt  client.c  client.h  clients.txt  equipement.c  equipement.h  interface.c  interface.c.bak  interface.h  main.c  ouvrier.c  ouvrier.h  ouvriers.txt  projettv  reservation.c  reservation.h  seche.c  seche.h  troupeau.c  troupeau.h
.deps/: callbacks.Po  ouvrier.Po  seche.Po
